:building_construction: modifica a estrutura do projeto para suportar versionamento da API
